# pantosmime

./: .gitignore  Cargo.toml  README.md  TESTING.md  default.nix  flake.nix  module.nix
data/mime/: multipart_example.eml  multipart_matryoshka.eml  simple_email.eml
src/: main.rs  milter_callbacks.rs  mime_parser.rs  smime.rs
