[package]
name = "pantosmime"
version = "0.1.0"
authors = ["Adrian 'vifino' Pistol <vifino@posteo.net>"]
license = "GPL-3.0-only"
edition = "2021"

[[bin]]
name = "pantosmimed"
path = "src/main.rs"


[dependencies]
anyhow = { version = "1.0.75" }
base64 = "0.22.1"
bytes = "1.5"
clap = { version = "4.4.7", features = ["derive"] }
indymilter = "0.3"
lazy_static = "1.5.0"
line-wrap = "0.2.0"
#mail-builder = "0.4.2"
nom = "7"
openssl = "0.10.72"
regex = "1.11.1"
#serde = { version = "1.0", features = ["derive"] }
#serde_yaml = "0.9"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.5.0", features = ["v4"] }

[profile.release]
# Optimize for Size.
# Performance is mostly irrelevant.
lto = true
opt-level = "z"
codegen-units = 1
strip = true
panic = "abort"
